CostalCloud/force-app/main/default/objects/Walls__c.object
<CustomObject>
    <label>Wall</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Wall</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>