CostalCloud/force-app/main/default/objects/Walls__c/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Door</label>
    <referenceTo>Door__c</referenceTo>
    <relationshipLabel>Door</relationshipLabel>
    <relationshipName>Door</relationshipName>
    <type>Lookup</type>
</CustomField>