CostalCloud/force-app/main/default/objects/Walls__c/fields/Interior_Wall_Coverings__c.field-meta.xml
<CustomField>
    <fullName>Interior_Wall_Coverings__c</fullName>
    <label>Interior Wall Coverings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>