CostalCloud/force-app/main/default/objects/Walls__c/fields/Overview_Photo__c.field-meta.xml
<CustomField>
    <fullName>Overview_Photo__c</fullName>
    <inlineHelpText>hold photo id</inlineHelpText>
    <label>Overview Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>