CostalCloud/force-app/main/default/objects/Walls__c/fields/Wall__c.field-meta.xml
<CustomField>
    <fullName>Wall__c</fullName>
    <label>Wall #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>