CostalCloud/force-app/main/default/objects/Walls__c/fields/Wall_Construction__c.field-meta.xml
<CustomField>
    <fullName>Wall_Construction__c</fullName>
    <label>Wall Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>