CostalCloud/force-app/main/default/objects/Walls__c/fields/Wall_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wall_Notes__c</fullName>
    <label>Wall Notes</label>
    <type>TextArea</type>
</CustomField>