CostalCloud/force-app/main/default/objects/Walls__c/fields/Wall_Recap__c.field-meta.xml
<CustomField>
    <fullName>Wall_Recap__c</fullName>
    <label>Wall Recap</label>
    <type>TextArea</type>
</CustomField>