CostalCloud/force-app/main/default/objects/Walls__c/fields/Width_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Width_Fraction__c</fullName>
    <label>Width: Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1/8</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>3/8</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>5/8</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>7/8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>