CostalCloud/force-app/main/default/objects/Walls__c/fields/Width_Inches__c.field-meta.xml
<CustomField>
    <fullName>Width_Inches__c</fullName>
    <inlineHelpText>Whole Inches Only</inlineHelpText>
    <label>Width: Inches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>