CostalCloud/force-app/main/default/objects/Walls__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Walls</relationshipLabel>
    <relationshipName>Walls</relationshipName>
    <type>Lookup</type>
</CustomField>